<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">99 Assistente</string>
    <string name="accessibility_service_description">Assistente automático para análise e aceite de corridas do 99 Motorista. Lê as informações da tela e aceita automaticamente corridas que atendam aos critérios configurados.</string>
    <string name="btn_ativar_servico">Ativar Assistente</string>
    <string name="btn_desativar_servico">Desativar Assistente</string>
    <string name="titulo_configuracoes">Configurações</string>
    <string name="valor_minimo_km_label">Valor mínimo por Km (R$)</string>
    <string name="distancia_maxima_busca_label">Distância máxima para buscar (Km)</string>
    <string name="assistente_ativo">Assistente Ativo</string>
    <string name="assistente_inativo">Assistente Inativo</string>
    <string name="corridas_aceitas">Corridas Aceitas</string>
    <string name="corridas_rejeitadas">Corridas Rejeitadas</string>
    <string name="ultima_corrida">Última Corrida</string>
    <string name="nenhuma_corrida">Nenhuma ainda</string>
</resources>
